change registration path
